--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ button {
 
 body {
     background-color: lightgrey;
+    margin: 0px;
 }
 
 div {
@@ -32,3 +33,20 @@ div {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
+h1 {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 0px;
+}
+
+p {
+    margin-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.ldistance {
+    margin-left: 30px;
+}
+
