--- a/style.css
+++ b/style.css
@@ -103,3 +103,8 @@ p {
     background-color: rgb(143, 197, 81);
 }
 
+/*ESPERIMENTO CON NUOVO FONT*/
+*{
+    font-family: 'Merriweather', serif;
+
+}
