--- a/style.css
+++ b/style.css
@@ -33,13 +33,22 @@ div {
     margin-top: 5px;
     margin-bottom: 5px;
 }
-
+/*
 h1 {
     margin-top: 30px;
     margin-left: 30px;
     margin-bottom: 0px;
     font-size: 30px;
 }
+*/
+summary {
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 0px;
+    font-size: 30px;
+}
+
+
 
 p {
     margin-left: 35px;
